<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grbl_ros</name>
  <version>0.0.10</version>
  <description>ROS2 package to interface with a GRBL serial device</description>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>
  <license>MIT</license>

  <build_depend>python3-serial</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
